# plutus-english-auction

./: .gitignore  README.md  cabal.project  cabal.project.local~  hie.yaml  plutus-pab.yaml  shell.nix
nix/pkgs/haskell/: haskell.nix
scripts/: balances.sh  send.sh  start-node-testnet.sh
scripts/auction/: abort.sh  bid.sh  build.sh  close.sh  mint.sh  start.sh  wallet.sh
scripts/auction/data/: bid-w2-redeemer.json  start-datum.json
scripts/auction/tokens/: matx.raw  matx.signed
scripts/auction/tokens/policy/: policy.vkey  policyID
scripts/auction/validators/: auction.plutus
scripts/output/: tx.body
scripts/wallets/w1/: payment.addr  payment.vkey  pubkeyhash.addr
scripts/wallets/w2/: payment-stake.addr  payment.addr  payment.vkey  stake.skey  stake.vkey
src/backend/: .blockfrost-testnet-token  .gitignore  backend.cabal  create-wallet.sh  env.sh  hie.yaml  load-wallet.sh  migrate-pab.sh  mint-token-haskell.sh  start-testnet-pab-remote.sh  start-testnet-pab.sh
src/backend/app/: pab-server.hs  rest-server.hs  send.hs
src/backend/src/: Contracts.hs  Endpoints.hs  Lib.hs  Main.hs  MintToken.hs  Minter.hs  TxListener.hs  Utils.hs  monitor.hs
src/backend/src/Contract/: Deploy.hs  EnglishAuction.hs  PAB.hs  SendContract.hs  Utils.hs
src/backend/src/Contract/Token/: OffChain.hs  OnChain.hs
src/backend/src/Plutus/Contract/Test/Coverage/: ReportCoverage.hs
src/backend/src/assets/: index.html  index.js
src/backend/src/assets/frontend-dist/: lib_nami-wallet_temporary_modules_emurgo_cardano-message-signing-browser_emurgo_message_signing_js.js  lib_nami-wallet_temporary_modules_emurgo_cardano-serialization-lib-browser_cardano_serializat-c39a7b.js  main.js  output_Main_index_js-node_modules_secrets_src_sync_recursive.js  vendors-node_modules_babel_runtime_helpers_assertThisInitialized_js-node_modules_babel_runtim-228367.js  vendors-node_modules_babel_runtime_helpers_assertThisInitialized_js-node_modules_babel_runtim-74c2af.js
src/backend/test/Spec/: Model.hs  Trace.hs
src/backend/testnet/: pab-config-remote.yml  pab-config.yml  plutus-pab.db
src/backend/testnet/wallets/: wallet-one.json
src/contracts/: EnglishAuctionTrace.html  cabal.project  contracts.cabal  env.sh  hie.yaml  load-wallet.sh  migrate-pab-remote.sh  start-testnet-pab-remote.sh  start-testnet-pab.sh
src/contracts/app/: mint-token.hs  monitor.hs  send.hs  token-pab.hs
src/contracts/old-scripts/: send.sh  start-node-testnet.sh  start-wallet-testnet.sh
src/contracts/old-scripts/auction/: abort.sh  bid.sh  build.sh  close.sh  errors  mint.sh  start.sh  wallet.sh
src/contracts/old-scripts/auction/data/: bid-w2-datum-hash.addr  bid-w2-datum.json  start-datum-hash.addr
src/contracts/old-scripts/auction/tokens/policy/: policy.script  policy.skey
src/contracts/old-scripts/auction/validators/: auction.addr
src/contracts/old-scripts/data/starter/: grab-params.json  publish-params.json
src/contracts/old-scripts/output/: tx-2.body  tx-2.signed  tx.draft  tx.signed
src/contracts/old-scripts/starter/: close.sh  grab.sh  publish.sh
src/contracts/old-scripts/validators/: starter.addr  starter.plutus
src/contracts/scripts/: balances.sh
src/contracts/src/: Deploy.hs  EnglishAuction.hs  Monitor.hs  PAB.hs  Send.hs  SendContract.hs  Utils.hs
src/contracts/src/Token/: OffChain.hs
src/contracts/test/: Spec.hs
src/contracts/test/Spec/: Model.hs  Trace.hs
src/contracts/testnet/: pab-config-remote.yml  pab-config.yml  plutus-pab-remote.db  plutus-pab.db
src/contracts/testnet/wallets/: wallet-two.json
src/frontend/: .env  .gitignore  README.md  index.js  package-lock.json  package.json  packages.dhall  spago.dhall  watch.sh  webpack.config.js
src/frontend/output/: cache-db.json
src/frontend/output/App/: externs.cbor  index.js
src/frontend/output/Chapter3/: externs.cbor  index.js
src/frontend/output/Chapter4/: externs.cbor  index.js
src/frontend/output/Control.Applicative.Free/: index.js
src/frontend/output/Control.Applicative.Free.Gen/: externs.cbor  index.js
src/frontend/output/Control.Comonad.Cofree/: index.js
src/frontend/output/Control.Comonad.Store/: externs.cbor
src/frontend/output/Control.Comonad.Store.Class/: externs.cbor
src/frontend/output/Control.Comonad.Store.Trans/: externs.cbor
src/frontend/output/Control.Monad.Cont/: externs.cbor
src/frontend/output/Control.Monad.Cont.Class/: externs.cbor
src/frontend/output/Control.Monad.Cont.Trans/: externs.cbor
src/frontend/output/Control.Monad.Error.Class/: externs.cbor  index.js
src/frontend/output/Control.Monad.Except/: externs.cbor
src/frontend/output/Control.Monad.Free/: externs.cbor
src/frontend/output/Control.Monad.Free.Class/: externs.cbor
src/frontend/output/Control.Monad.Identity.Trans/: externs.cbor
src/frontend/output/Control.Monad.Reader/: externs.cbor
src/frontend/output/Control.Monad.State/: externs.cbor
src/frontend/output/Control.Monad.State.Class/: externs.cbor
src/frontend/output/Control.Monad.Writer.Trans/: externs.cbor
src/frontend/output/DOM.HTML.Indexed.ButtonType/: externs.cbor  index.js
src/frontend/output/DOM.HTML.Indexed.CrossOriginValue/: externs.cbor  index.js
src/frontend/output/DOM.HTML.Indexed.DirValue/: index.js
src/frontend/output/DOM.HTML.Indexed.FormMethod/: externs.cbor  index.js
src/frontend/output/DOM.HTML.Indexed.InputAcceptType/: externs.cbor  index.js
src/frontend/output/DOM.HTML.Indexed.InputType/: externs.cbor  index.js
src/frontend/output/DOM.HTML.Indexed.KindValue/: index.js
src/frontend/output/DOM.HTML.Indexed.MenuType/: index.js
src/frontend/output/DOM.HTML.Indexed.MenuitemType/: index.js
src/frontend/output/DOM.HTML.Indexed.OnOff/: index.js
src/frontend/output/DOM.HTML.Indexed.OrderedListType/: externs.cbor  index.js
src/frontend/output/DOM.HTML.Indexed.PreloadValue/: index.js
src/frontend/output/DOM.HTML.Indexed.ScopeValue/: index.js
src/frontend/output/Data.JSDate/: externs.cbor
src/frontend/src/: App.purs  Main.purs
wallets/w1/: payment.skey  stake.skey  stake.vkey
wallets/w2/: payment.skey  pubkeyhash.addr
(+153 files in other folders)
