cabal-version:      2.4
name:               backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Christofer Ärleryd
maintainer:         c.arleryd@gmail.com

-- A copyright notice.
-- copyright:
-- category:

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Endpoints
  build-depends:       base ^>=4.14.1.0
                     , blockfrost-client >= 0.1.0.0
                     , blockfrost-api >= 0.1.0.0
                     , blockfrost-pretty >= 0.1.0.0
                     , directory >= 1.0.0.3
                     , text >= 0.5
                     , prettyprinter >= 1.7.1
                     , prettyprinter-ansi-terminal >= 1.1.3
                     , lens >= 4.19.2
                     , safe-money >= 0.9.1
                     , scotty
                     , aeson >= 1.5.6.0
  default-language:    Haskell2010
  ghc-options:         -Wall

executable backend
    main-is:           Main.hs
    other-modules:     Lib
    build-depends:     base ^>=4.14.1.0
                     , blockfrost-client >= 0.1.0.0
                     , blockfrost-api >= 0.1.0.0
                     , blockfrost-pretty >= 0.1.0.0
                     , directory >= 1.0.0.3
                     , text >= 0.5
                     , lens >= 4.19.2
                     , scotty
                     , aeson >= 1.5.6.0
    hs-source-dirs:    src
    default-language:  Haskell2010
