cabal-version:      2.4
name:               backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Christofer Ärleryd
maintainer:         c.arleryd@gmail.com

-- A copyright notice.
-- copyright:
-- category:

library
  hs-source-dirs:      src
  exposed-modules:     Utils
                     , Endpoints
                     , MintToken
                     , TxListener
                     , Contract.EnglishAuction
                     , Contract.PAB
                     , Contract.SendContract
                     , Contract.Utils
                     , Contract.Token.OffChain
                     , Contract.Token.OnChain
                     , Plutus.Contract.Test.Coverage.ReportCoverage
  build-depends:       base ^>=4.14.1.0
                     , blockfrost-client >= 0.1.0.0
                     , blockfrost-api >= 0.1.0.0
                     , blockfrost-pretty >= 0.1.0.0
                     , cardano-wallet-core
                     , directory >= 1.0.0.3
                     , text >= 0.5
                     , plutus-pab
                     , plutus-ledger-api
                     , prettyprinter >= 1.7.1
                     , prettyprinter-ansi-terminal >= 1.1.3
                     , lens >= 4.19.2
                     , safe-money >= 0.9.1
                     , scotty
                     , serialise
                     , aeson >= 1.5.6.0
                     , req ^>= 3.9.0
                     , cborg
                     , cborg-json
                     , wai-cors
                     , plutus-ledger
                     , generic-aeson
                     , cardano-crypto-class
                     , cardano-ledger-core
                     , containers
                     , data-default
                     , plutus-contract
                     , plutus-use-cases
                     , plutus-ledger-constraints
                     , plutus-tx-plugin
                     , plutus-tx
                     , cardano-api
                     , bytestring
                     , openapi3
                     , html-entities
                     , playground-common
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable backend
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       Utils
                     , Endpoints
                     , TxListener
                     , Contract.PAB
                     , Contract.SendContract
                     , Contract.Token.OffChain
                     , Contract.Token.OnChain
                     , Contract.Utils
                     , MintToken
  build-depends:       base ^>=4.14.1.0
                     , blockfrost-client >= 0.1.0.0
                     , blockfrost-api >= 0.1.0.0
                     , blockfrost-pretty >= 0.1.0.0
                     , directory >= 1.0.0.3
                     , text >= 0.5
                     , lens >= 4.19.2
                     , scotty
                     , aeson >= 1.5.6.0
                     , req ^>= 3.9.0
                     , cardano-wallet-core
                     , plutus-pab
                     , plutus-contract
                     , wai-cors
                     , plutus-ledger
                     , bytestring
                     , generic-aeson
                     , plutus-ledger-constraints
                     , plutus-tx
                     , plutus-tx-plugin
                     , containers
                     , plutus-ledger-api
                     , serialise
                     , cardano-ledger-core
                     , cardano-crypto-class
                     , cardano-api
                     , prettyprinter >= 1.7.1
                     , openapi3
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable token-pab
  main-is:             token-pab.hs
  hs-source-dirs:      app
                     , src
  other-modules:       Contract.PAB
                     , Contract.SendContract
                     , Contract.Token.OffChain
                     , Contract.Token.OnChain
                     , Contract.Utils
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , cardano-crypto-class
                     , cardano-ledger-core
                     , data-default
                     , freer-extras
                     , freer-simple
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-constraints
                     , plutus-pab
                     , plutus-use-cases
                     , text
                     , plutus-tx
                     , plutus-tx-plugin
                     , containers
                     , plutus-ledger-api
                     , serialise
                     , cardano-ledger-core
                     , cardano-crypto-class
                     , cardano-api
                     , prettyprinter >= 1.7.1
                     , openapi3
                     , bytestring
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite contracts-tests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
                     , src
  other-modules:       Spec.Trace
                     , Spec.Model
                     , Contract.PAB
                     , Contract.EnglishAuction
                     , Contract.SendContract
                     , Contract.Token.OffChain
                     , Contract.Token.OnChain
                     , Contract.Utils
                     , Plutus.Contract.Test.Coverage.ReportCoverage
  build-depends:       base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , lens
                     , plutus-contract
                     , plutus-ledger
                     , plutus-tx
                     , QuickCheck
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , aeson >= 1.5.6.0
                     , plutus-ledger-constraints
                     , playground-common
                     , plutus-ledger-api
                     , serialise
                     , cardano-ledger-core
                     , cardano-crypto-class
                     , cardano-api
                     , prettyprinter >= 1.7.1
                     , openapi3
                     , bytestring
                     , plutus-pab
                     , html-entities
  default-language:    Haskell2010
  ghc-options:         -main-is Spec
  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin -any
